--- a/html5video.html
+++ b/html5video.html
@@ -2,7 +2,7 @@
 <html> 
 <body> 
 
-<video width="400" controls>
+<video width="400" controls muted autoplay playsinline>
   <source src="https://webdemo.dac.co.jp/adformat/ivt/test/vast/video/fruitsbear-640x360-15s.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
@@ -14,4 +14,3 @@ Video courtesy of
 
 </body> 
 </html>
-
