--- a/html5video.html
+++ b/html5video.html
@@ -9,7 +9,7 @@
 
 <p>
 Video courtesy of 
-<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
+<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny Video</a>.
 </p>
 
 </body> 
