--- a/html5video.html
+++ b/html5video.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html> 
 <html> 
-<body> 
+<body style="margin:0; padding:0; overflow:hidden"> 
 
-<video width="400" controls muted autoplay playsinline>
+<video style="position:fixed; right:0; bottom:0; min-width:100%; min-height:100%;" controls muted autoplay playsinline>
   <source src="https://webdemo.dac.co.jp/adformat/ivt/test/vast/video/fruitsbear-640x360-15s.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 
 <p>
 Video courtesy of 
-<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny Video</a>.
+<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
 </p>
 
 </body> 
