--- a/html5video.html
+++ b/html5video.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html> 
 <html> 
-<body style="margin:0; padding:0; overflow:hidden"> 
+<!DOCTYPE html> 
+<html> 
+<body style="margin:0; padding:0; overflow:hidden">
 
-<video style="position:fixed; right:0; bottom:0; min-width:100%; min-height:100%;" controls muted autoplay playsinline>
+<video id="myVideo" style="position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); width:100%; height:auto;" controls muted autoplay playsinline>
   <source src="https://webdemo.dac.co.jp/adformat/ivt/test/vast/video/fruitsbear-640x360-15s.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
+
+</body> 
+</html>
 
 <p>
 Video courtesy of 
