--- a/html5video.html
+++ b/html5video.html
@@ -2,19 +2,36 @@
 <html>
 <body style="margin:0; padding:0; overflow:hidden">
 
-<div style="position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); width:100%; height:100%;">
-  <video id="myVideo" style="position:absolute; width:100%; height:100%;" controls muted autoplay playsinline>
-    <source src="https://webdemo.dac.co.jp/adformat/ivt/test/vast/video/fruitsbear-640x360-15s.mp4" type="video/mp4">
-    Your browser does not support HTML video.
-  </video>
-
-  <img id="muteButton" src="https://cdn-icons-png.freepik.com/512/189/189653.png" style="position:absolute; left:3px; bottom:3px; width:24px; height:24px;">
-  <img id="fullscreenButton" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJrWpYW8278j5cNcw_A6BwMiS2StgWLdVVZw&s" style="position:absolute; right:3px; bottom:3px; width:24px; height:24px;">
+<div id="17187_12075">
+    <div class="dac-ivt-root-container" id="dac-adcontainer-root-dacivt54659740" style="margin: auto; border: none; visibility: visible; overflow: hidden; position: relative;">
+        <div class="dac-ivt-normal-container base appear" id="dac-adcontainer-0-dacivt54659740" style="margin: auto; border: none; visibility: visible; overflow: hidden; position: relative;">
+            <style type="text/css"></style>
+            <div class="dac-ivt-ad-frame" role="wrapper" style="margin: auto; padding: 0px; border: none; visibility: visible; overflow: hidden; position: absolute; inset: 0px;">
+                <div id="dac-ivt-header-frame" style="margin: 0px; padding: 0px; border: none; width: 100%; height: 0px;"></div>
+                <div id="dac-ivt-main-frame" style="margin: 0px; padding: 0px; border: none; width: 100%; height: 819px;">
+                    <div id="dac-ivt-left-side-frame" style="margin: 0px; padding: 0px; border: none; display: inline-block; vertical-align: top; width: 0px; height: 100%;"></div>
+                    <div style="margin: 0px auto; padding: 0px; border: none; visibility: visible; overflow: hidden; position: relative; width: 1456px; height: 819px; background-color: rgb(0, 0, 0); display: inline-block; vertical-align: top;">
+                        <video playsinline="" muted="" controlslist="nodownload noremoteplayback nofullscreen" class="dac-ivt-video-player" src="https://webdemo.dac.co.jp/adformat/ivt/test/vast/video/fruitsbear-640x360-15s.mp4" style="margin: 0px auto; padding: 0px; border: none; display: block; position: static; width: 100%; height: 100%; overflow: hidden; cursor: pointer; object-fit: contain; visibility: visible;"></video>
+                        <div class="dac-ivt-video-slot" style="margin: 0px auto; padding: 0px; border: none; visibility: visible; overflow: hidden; display: block; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; cursor: pointer;">
+                            <img id="dac-ivt-fullscreen-button" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJrWpYW8278j5cNcw_A6BwMiS2StgWLdVVZw&s" style="margin: 0px auto; padding: 0px; border: none; visibility: visible; overflow: hidden; cursor: pointer; position: absolute; bottom: 3px; right: 3px; width: 24px; height: 24px; opacity: 1;">
+                            <img id="dac-ivt-volume-button" src="https://cdn-icons-png.freepik.com/512/189/189653.png" style="margin: 0px auto; padding: 0px; border: none; visibility: visible; overflow: hidden; cursor: pointer; position: absolute; bottom: 3px; left: 3px; width: 24px; height: 24px; opacity: 1;">
+                            <img id="dac-ivt-replay-button" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZ40v_PUHDGDbusWZeiZId8yk1sZP8BJq7mw&s" style="margin: 0px auto; padding: 0px; border: none; visibility: hidden; overflow: hidden; cursor: pointer; position: absolute; bottom: 3px; left: 3px; width: 24px; height: 24px; opacity: 0;">
+                            <img id="dac-ivt-detail-button" src="https://w7.pngwing.com/pngs/756/956/png-transparent-computer-icons-symbol-hamburger-button-details-miscellaneous-blue-angle-thumbnail.png" style="margin: 0px auto; padding: 0px; border: none; visibility: hidden; overflow: hidden; cursor: pointer; position: absolute; bottom: 3px; right: 3px; width: 24px; height: 24px; opacity: 0;">
+                            <img id="dac-ivt-loading-button" src="https://png.pngtree.com/png-vector/20200224/ourmid/pngtree-colorful-loading-icon-png-image_2152960.jpg" style="margin: auto; padding: 0px; border: none; visibility: hidden; overflow: hidden; cursor: progress; position: absolute; inset: 0px; width: 20px; height: 20px;">
+                        </div>
+                    </div>
+                    <div id="dac-ivt-right-side-frame" style="margin: 0px; padding: 0px; border: none; display: inline-block; vertical-align: top; width: 0px; height: 100%;"></div>
+                </div>
+                <div id="dac-ivt-footer-frame" style="margin: 0px; padding: 0px; border: none; width: 100%; height: 0px;"></div>
+                <img id="dac-ivt-close-button" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlXPo6_suawf5W6FdqqY-aaiBpt2axrG58jQ&s" style="margin: 0px auto; padding: 0px; border: none; visibility: visible; overflow: hidden; cursor: pointer; position: absolute; top: 3px; right: 3px; width: 24px; height: 24px; opacity: 1;">
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
-document.getElementById('fullscreenButton').addEventListener('click', function() {
-  var video = document.getElementById('myVideo');
+document.getElementById('dac-ivt-fullscreen-button').addEventListener('click', function() {
+  var video = document.querySelector('.dac-ivt-video-player');
   if (video.requestFullscreen) {
     video.requestFullscreen();
   } else if (video.mozRequestFullScreen) { // Firefox
@@ -28,8 +45,8 @@ document.getElementById('fullscreenButton').addEventListener('click', function()
   }
 });
 
-document.getElementById('muteButton').addEventListener('click', function() {
-  var video = document.getElementById('myVideo');
+document.getElementById('dac-ivt-volume-button').addEventListener('click', function() {
+  var video = document.querySelector('.dac-ivt-video-player');
   video.muted = !video.muted;
 });
 </script>
