--- a/html5video.html
+++ b/html5video.html
@@ -35,7 +35,7 @@ fullscreenButton.addEventListener("click", function() {
 });
 
 closeButton.addEventListener("click", function() {
-  video.pause();
+  videoContainer.style.display = "none";
 });
 </script>
 
