--- a/html5video.html
+++ b/html5video.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body style="margin:0; padding:0; overflow:hidden">
-
+<lable>Test Video 1</lable>
 <div id="videoContainer" style="position: relative; width: 100%; height: 100vh;">
-  <video id="myVideo" style="position: relative; width: 100%; height: 100%;" autoplay muted>
+  <video id="myVideo" style="position: relative; width: 100%; height: 100%;" autoplay muted playsinline>
     <source src="https://webdemo.dac.co.jp/adformat/ivt/test/vast/video/fruitsbear-640x360-15s.mp4" type="video/mp4">
   </video>
 
