--- a/html5video.html
+++ b/html5video.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body style="margin:0; padding:0; overflow:hidden">
-<lable>Video 4</lable>
+<lable>Video 5</lable>
 <div id="videoContainer" style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;">
   <video id="myVideo" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" autoplay muted playsinline>
     <source src="https://webdemo.dac.co.jp/adformat/ivt/test/vast/video/fruitsbear-640x360-15s.mp4" type="video/mp4">
@@ -31,6 +31,8 @@ fullscreenButton.addEventListener("click", function() {
     video.webkitRequestFullscreen();
   } else if (video.msRequestFullscreen) {
     video.msRequestFullscreen();
+  } else if (video.webkitEnterFullScreen) {
+    video.webkitEnterFullScreen();
   }
 });
 
