--- a/html5video.html
+++ b/html5video.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body style="margin:0; padding:0; overflow:hidden">
-<lable>Video 5</lable>
+<lable>Video 6</lable>
 <div id="videoContainer" style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%;">
-  <video id="myVideo" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" autoplay muted playsinline>
+  <video id="myVideo" controls style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" autoplay muted playsinline>
     <source src="https://webdemo.dac.co.jp/adformat/ivt/test/vast/video/fruitsbear-640x360-15s.mp4" type="video/mp4">
   </video>
 
